--- a/ztype/BUILD.bazel
+++ b/ztype/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
     importpath = "github.com/woven-planet/go-zserio/ztype",
     visibility = ["//visibility:public"],
     deps = [
+        "//interface",
         "@com_github_icza_bitio//:go_default_library",
         "@com_github_x448_float16//:go_default_library",
     ],
