--- a/ztype/BUILD.bazel
+++ b/ztype/BUILD.bazel
@@ -3,16 +3,24 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "ztype",
     srcs = [
+        "array.go",
+        "array_decode.go",
+        "array_encode.go",
+        "array_traits.go",
+        "bit_alignment.go",
         "bits_decode.go",
         "bits_encode.go",
         "bool_decode.go",
         "bool_encode.go",
+        "delta_context.go",
         "extern_decode.go",
         "extern_encode.go",
         "extern.go",
         "float_decode.go",
         "float_encode.go",
         "limits.go",
+        "packed_array_traits.go",
+        "packing_context_node.go",
         "string_decode.go",
         "string_encode.go",
         "varint_decode.go",
@@ -32,6 +40,8 @@ go_library(
 go_test(
     name = "ztype_test",
     srcs = [
+        "array_decode_test.go",
+        "array_encode_test.go",
         "bits_decode_test.go",
         "bits_encode_test.go",
         "bool_decode_test.go",
