Adds a Test Case, Which will Compare Go-Zserio with Reference Zserio
- This test case will use reference zserio to generate a binary file,
  then decodes the binary data with go-zserio, and encodes it again.
  The test will pass if the binary file that gets generated still
  matches the original file.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,10 +10,25 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+       
       - name: Mount bazel cache
         uses: actions/cache@v2
         with:
           path: "~/.cache/bazel"
           key: bazel
       - run: bazel test //...
+
+      - name: Install Dependencies
+        run: python -m pip install "zserio==2.4.2"
+        
+      - name: Generate the Python zserio code using reference zserio
+        run: python -m zserio -src $PWD/testdata reference_modules/all.zs -setTopLevelPackage testdata -python $PWD/test/python
+        
+      - name: Generate the Go zserio code using go-zserio
+        run: bazel run //zserio -- generate $PWD/testdata -r github.com/woven-planet/go-zserio/test/go-schema -o $PWD/test/go-schema
+      
+      # This test cannot run with Bazel, as the generated Go files do not generate Bazel files
+      - run: go test ./test
+        
+
 
