Activate the Gherkins Test Case
- Create the binary output directory.
- The files that are revelant for the test execution are now
  copied as data, when the tests get executed.
- As a workaround, create the zserio test file as part of the
  Github Action, not of the actual test case. I haven't figured
  out yet how to integrate Python into Bazel.
- Changed the rights when writing a file to 0644, otherwise the
  test would not be able to read the file it just wrote.
- cleaned the python code with black.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,11 @@ jobs:
       - name: Workaround - restore the bazel files for the generator
         run: git restore $PWD/internal/parser/BUILD.bazel
 
+      - name: Generate zserio dummy data
+        working-directory: test
+        run: python3 python/write_test_data.py
+
+
       - run: bazel test //...
         
 
