Work on babel test setup

--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -1,15 +1,22 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
+genrule(
+    name = "testdata",
+    outs = ["testdata.bin"],
+    cmd = "$(location //test/python:write_test_data)",
+    tools = ["//test/python:write_test_data"],
+)
+
 go_test(
     name = "test_test",
     srcs = [
         "integration_test.go",
     ],
-    
     data = glob([
         "python/**",
-        "bin/testdata.bin",
-        "features/compare_with_zserio_reference.feature"]),
+        ":testdata",
+        "features/compare_with_zserio_reference.feature",
+    ]),
     deps = [
         "//test/go-schema/reference_modules/testobject1/testobject",
         "@com_github_cucumber_godog//:godog",
