gazelle now runs correctly

--- a/internal/generator/BUILD.bazel
+++ b/internal/generator/BUILD.bazel
@@ -6,20 +6,47 @@ go_library(
         "expression.go",
         "funcs.go",
         "gen.go",
-        "templates.go",
-        "types.go",
         "strip_imports.go",
         "syscall_unix.go",
-        "syscall_windows.go"
+        "syscall_windows.go",
+        "templates.go",
+        "types.go",
+    ],
+    embedsrcs = [
+        "templates/array_init.go.tmpl",
+        "templates/array_traits_type.go.tmpl",
+        "templates/bitmask.go.tmpl",
+        "templates/bitsizeof.go.tmpl",
+        "templates/builtin_bitsizeof.go.tmpl",
+        "templates/choice.go.tmpl",
+        "templates/decode.go.tmpl",
+        "templates/decode_compound_parameters.go.tmpl",
+        "templates/default_values.go.tmpl",
+        "templates/encode.go.tmpl",
+        "templates/encode_array_init.go.tmpl",
+        "templates/encode_compound_parameters.go.tmpl",
+        "templates/enum.go.tmpl",
+        "templates/field_declaration.go.tmpl",
+        "templates/field_name.go.tmpl",
+        "templates/functions.go.tmpl",
+        "templates/instantiate_array_traits.go.tmpl",
+        "templates/package.go.tmpl",
+        "templates/packing_context_bitsize.go.tmpl",
+        "templates/packing_context_create.go.tmpl",
+        "templates/packing_context_decode.go.tmpl",
+        "templates/packing_context_encode.go.tmpl",
+        "templates/packing_context_init.go.tmpl",
+        "templates/preamble.go.tmpl",
+        "templates/struct.go.tmpl",
+        "templates/union.go.tmpl",
     ],
     importpath = "github.com/woven-planet/go-zserio/internal/generator",
     visibility = ["//:__subpackages__"],
-    embedsrcs = glob(["templates/*.go.tmpl"]),
     deps = [
         "//internal/ast",
         "//internal/model",
         "//internal/parser",
-        "@com_github_iancoleman_strcase//:go_default_library",
-        "@com_github_masterminds_sprig_v3//:go_default_library",
+        "@com_github_iancoleman_strcase//:strcase",
+        "@com_github_masterminds_sprig_v3//:sprig",
     ],
 )
