--- a/ztype/BUILD.bazel
+++ b/ztype/BUILD.bazel
@@ -40,6 +40,7 @@ go_library(
 go_test(
     name = "ztype_test",
     srcs = [
+        "array_test.go",
         "array_decode_test.go",
         "array_encode_test.go",
         "bits_decode_test.go",
@@ -56,6 +57,7 @@ go_test(
         "varuint_encode_test.go",
     ],
     deps = [
+        "//interface",
         ":ztype",
         "@com_github_google_go_cmp//cmp",
         "@com_github_google_go_cmp//cmp/cmpopts",
