gazelle and cleanup test code

--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -9,9 +9,7 @@ genrule(
 
 go_test(
     name = "test_test",
-    srcs = [
-        "integration_test.go",
-    ],
+    srcs = ["integration_test.go"],
     data = glob([
         "python/**",
         ":testdata",
@@ -19,7 +17,7 @@ go_test(
     ]),
     deps = [
         "//test/go-schema/reference_modules/testobject1/testobject",
-        "@com_github_cucumber_godog//:godog",
+        "@com_github_cucumber_godog//:go_default_library",
         "@com_github_icza_bitio//:bitio",
     ],
 )
