--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,37 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
+load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 
 # gazelle:prefix github.com/woven-planet/go-zserio
 # gazelle:resolve go github.com/antlr/antlr4/runtime/Go/antlr @antlr4_runtimes//:go
 gazelle(name = "gazelle")
+gazelle(
+    name = "gazelle_check",
+    args = [
+        "-mode=diff",
+    ],
+)
+
+gazelle(
+    name = "gazelle-update-repos",
+    args = [
+        "-from_file=go.mod",
+        "-to_macro=third_party/go/repositories.bzl%go_repositories",
+        "-prune",
+    ],
+    command = "update-repos",
+)
+
+buildifier(
+    name = "buildifier_check",
+    lint_mode = "warn",
+    lint_warnings = ["all"],
+    mode = "check",
+    verbose = True,
+)
+
+buildifier(
+    name = "buildifier",
+    lint_mode = "warn",
+    lint_warnings = ["all"],
+    mode = "check",
+)
