--- a/test/python/BUILD.bazel
+++ b/test/python/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@pip//:requirements.bzl", "requirement")
+load("@rules_java//java:defs.bzl", "java_binary")
+load("@rules_python//python:defs.bzl", "py_binary", "py_library")
 
 java_binary(
     name = "zserio_compiler",
