gazelle fixes and rework the project structure
Usually the command applications are kept in a folder called `cmd`. This
is especially relevant if there are multiple CLI applications. Hence the
move of the CLI library code to the `internal` package.

What is more, the `main` package is normally reserved for executable
applications. In our case the top level docs package may still be called
`zserio`.

--- a/cmd/zserio/BUILD.bazel
+++ b/cmd/zserio/BUILD.bazel
@@ -3,9 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "zserio_lib",
     srcs = ["main.go"],
-    importpath = "github.com/woven-planet/go-zserio/zserio",
+    importpath = "github.com/woven-planet/go-zserio/cmd/zserio",
     visibility = ["//visibility:private"],
-    deps = ["//zserio/cmd"],
+    deps = ["//internal/cli"],
 )
 
 go_binary(
