--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,8 +1,11 @@
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 
 # gazelle:prefix github.com/woven-planet/go-zserio
 # gazelle:resolve go github.com/antlr/antlr4/runtime/Go/antlr @antlr4_runtimes//:go
+# gazelle:exclude example/**
+# gazelle:exclude **/testobject1/**
 gazelle(name = "gazelle")
 
 gazelle(
@@ -19,4 +22,11 @@ buildifier(
     name = "buildifier",
     lint_mode = "warn",
     lint_warnings = ["all"],
+)
+
+go_library(
+    name = "go-zserio_lib",
+    srcs = ["doc.go"],
+    importpath = "github.com/woven-planet/go-zserio",
+    visibility = ["//visibility:private"],
 )
