--- a/internal/cli/BUILD.bazel
+++ b/internal/cli/BUILD.bazel
@@ -15,3 +15,19 @@ go_library(
         "@com_github_spf13_cobra//:cobra",
     ],
 )
+
+go_library(
+    name = "cli",
+    srcs = [
+        "d.go",
+        "generate.go",
+        "root.go",
+    ],
+    importpath = "github.com/woven-planet/go-zserio/internal/cli",
+    visibility = ["//:__subpackages__"],
+    deps = [
+        "//internal/generator",
+        "//internal/model",
+        "@com_github_spf13_cobra//:cobra",
+    ],
+)
