--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,3 +1,3 @@
 build: Dockerfile
-	docker build --progress=plain --build-arg bazelisk_version=1.11.0 -t go-zerio:dev .
+	docker build --progress=plain --build-arg bazelisk_version=1.11.0 -t go-zserio:dev .
 
