--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,32 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
+load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 # gazelle:prefix github.com/woven-planet/go-zserio
 # gazelle:resolve go github.com/antlr/antlr4/runtime/Go/antlr @antlr4_runtimes//:go
+# gazelle:exclude example/**
+# gazelle:exclude **/testobject1/**
 gazelle(name = "gazelle")
+
+gazelle(
+    name = "gazelle-update-repos",
+    args = [
+        "-from_file=go.mod",
+        "-to_macro=third_party/go/repositories.bzl%go_repositories",
+        "-prune",
+    ],
+    command = "update-repos",
+)
+
+buildifier(
+    name = "buildifier",
+    lint_mode = "warn",
+    lint_warnings = ["all"],
+)
+
+go_library(
+    name = "go-zserio_lib",
+    srcs = ["doc.go"],
+    importpath = "github.com/woven-planet/go-zserio",
+    visibility = ["//visibility:private"],
+)
