--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
 
       - name: Mount bazel cache
         uses: actions/cache@v2
@@ -17,9 +18,10 @@ jobs:
           path: "~/.cache/bazel"
           key: bazel
 
-      - name: buildifier and gazelle checks
+      - uses: pre-commit/action@v2.0.3
+
+      - name: gazelle
         run: |
-          ./bin/ensure-unchanged bazel run //:buildifier
           ./bin/ensure-unchanged ./bin/gazelle
           ./bin/ensure-unchanged ./bin/gazelle-update-repos
 
