Add go_zserio_library bazel rule
Summary:
- Allow to generate code for a single package.
- Allow to write output to stdout.
- Allow parsing a list of files instead of a directory.
- Introduce a data-type to allow abstracting the writing to file/stdout.
- Move the preamble generation out of the template files to go files.
  This allows to have all output for a package in a single file or
  stdout. Preamble contains the package declaration, comments and
  imports.

Extra cleanups:
- Remove the `dummy.go` file as it is not needed anymore.
- gazelle-ignore all `_gen.zs.go` files.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,7 +5,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 # gazelle:prefix github.com/woven-planet/go-zserio
 # gazelle:resolve go github.com/antlr/antlr4/runtime/Go/antlr @antlr4_runtimes//:go
 # gazelle:exclude example/**
-# gazelle:exclude **/testobject1/**
+# gazelle:exclude **/*_gen.zs.go
 gazelle(name = "gazelle")
 
 gazelle(
