--- a/internal/model/BUILD.bazel
+++ b/internal/model/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "model",
@@ -14,5 +14,20 @@ go_library(
         "//internal/parser",
         "//internal/visitor",
         "@antlr4_runtimes//:go",
+    ],
+)
+
+go_test(
+    name = "model_test",
+    srcs = ["model_test.go"],
+    data = ["//testdata:examples"],
+    embed = [":model"],
+    env = {
+        "TEST_ZSERIO_EXAMPLES": "$(rootpaths //testdata:examples)",
+    },
+    deps = [
+        "//internal/ast",
+        "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//require",
     ],
 )
