--- a/test/python/BUILD.bazel
+++ b/test/python/BUILD.bazel
@@ -28,6 +28,7 @@ genrule(
         "testdata/reference_modules/core/__init__.py",
         "testdata/reference_modules/core/instantiations/__init__.py",
         "testdata/reference_modules/core/instantiations/api.py",
+        "testdata/reference_modules/core/instantiations/instantiated_template_choice.py",
         "testdata/reference_modules/core/instantiations/instantiated_template_struct.py",
         "testdata/reference_modules/core/api.py",
         "testdata/reference_modules/core/templates/__init__.py",
