--- a/ztype/BUILD.bazel
+++ b/ztype/BUILD.bazel
@@ -34,7 +34,7 @@ go_library(
     importpath = "github.com/woven-planet/go-zserio/ztype",
     visibility = ["//visibility:public"],
     deps = [
-        "//interface",
+        "//:zserio",
         "@com_github_icza_bitio//:bitio",
         "@com_github_x448_float16//:float16",
     ],
@@ -62,7 +62,7 @@ go_test(
     ],
     deps = [
         ":ztype",
-        "//interface",
+        "//:zserio",
         "@com_github_google_go_cmp//cmp",
         "@com_github_google_go_cmp//cmp/cmpopts",
         "@com_github_icza_bitio//:bitio",
