Test Case for Ambiguous Selector Values in Choices
- This problem was found after the choices were changes from a
  series of if() to switch-case (PR#46).
- This new problem is that the choice selector case values might
  not be correctly evaluated, if the selector variable is of enum
  type, and not the full typename was given. Consider for example:

  choice(type EnumTypeA) on type
  {
    case value1: [...]
  }

  If "value1" would be defined in other enums than "EnumTypeA" as
  well, that would cause an ambiguity, and depending which enum
  is resolved first, the wrong value might be taken.
- In the current situation, this would cause the generated code to
  fail compiling sometimes (if the wrong enum is resolved).
- This commit adds a test case to check for this situation.

--- a/test/python/BUILD.bazel
+++ b/test/python/BUILD.bazel
@@ -24,7 +24,10 @@ genrule(
         "testdata/reference_modules/core/types/value_wrapper.py",
         "testdata/reference_modules/core/types/__init__.py",
         "testdata/reference_modules/core/types/api.py",
+        "testdata/reference_modules/core/types/basic_choice.py",
         "testdata/reference_modules/core/types/city_attributes.py",
+        "testdata/reference_modules/core/types/some_enum.py",
+        "testdata/reference_modules/core/types/some_other_enum.py",
         "testdata/reference_modules/core/__init__.py",
         "testdata/reference_modules/core/instantiations/__init__.py",
         "testdata/reference_modules/core/instantiations/api.py",
