Move tests requiring generated files behind tag
Running "go test" was failing for tests that required generated files.
To support basic use of go test introduce a new "integration" tag, so
those tests are only when explicitly asked for.

--- a/internal/generator/BUILD.bazel
+++ b/internal/generator/BUILD.bazel
@@ -58,6 +58,7 @@ go_test(
     env = {
         "TEST_ZSERIO_EXAMPLES": "$(rootpaths //testdata:examples)",
     },
+    gotags = ["integration"],
     deps = [
         "//internal/ast",
         "//internal/model",
