--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: gazelle
         run: |
-          ./bin/ensure-unchanged ./bin/gazelle
+          ./bin/ensure-unchanged ./bin/gazelle -- -build_tags integration
           ./bin/ensure-unchanged ./bin/gazelle-update-repos
 
       - run: bazel test //...
