--- a/internal/parser/.gitignore
+++ b/internal/parser/.gitignore
@@ -1,17 +1,3 @@
-DocComment.interp
-DocComment.tokens
-DocCommentLexer.interp
-DocCommentLexer.tokens
-ZserioLexer.interp
-ZserioLexer.tokens
-ZserioParser.interp
-ZserioParser.tokens
-doccomment_base_listener.go
-doccomment_lexer.go
-doccomment_listener.go
-doccomment_parser.go
-zserio_lexer.go
-zserio_parser.go
-zserioparser_base_visitor.go
-zserioparser_visitor.go
+*.interp
+*.tokens
 .antlr
