--- a/internal/model/BUILD.bazel
+++ b/internal/model/BUILD.bazel
@@ -13,7 +13,7 @@ go_library(
         "//internal/ast",
         "//internal/parser",
         "//internal/visitor",
-        "@antlr4_runtimes//:go",
+        "@com_github_antlr_antlr4_runtime_go_antlr//:antlr",
     ],
 )
 
