--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,23 @@ jobs:
 
       - name: gazelle
         run: |
+          ./bin/ensure-unchanged bazel run //:buildifier
+          ./bin/ensure-unchanged bazel run //internal/parser:update
           ./bin/ensure-unchanged ./bin/gazelle
           ./bin/ensure-unchanged ./bin/gazelle-update-repos
 
       - run: bazel test //...
+
+  integration_test:
+    name: Example tests
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          stable: false
+          go-version: '1.18.0-beta2'
+
+      - run: ./bin/ensure-unchanged ./example/test.sh
