add new functions for ease of use

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -28,6 +28,7 @@ go_library(
     srcs = [
         "doc.go",
         "iface.go",
+        "marshal.go",
         "packing_context_node.go",
     ],
     importpath = "github.com/woven-planet/go-zserio",
