--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -26,8 +26,8 @@ go_test(
         "TESTDATA_BIN": "$(rootpath :testdata)",
     },
     deps = [
+        "//:lib",
         "//test/go:testobject",
         "@com_github_cucumber_godog//:godog",
-        "@com_github_icza_bitio//:bitio",
     ],
 )
