--- a/test/reference/BUILD.bazel
+++ b/test/reference/BUILD.bazel
@@ -25,6 +25,8 @@ go_test(
     },
     deps = [
         "//:lib",
+        "//testdata/reference_modules:go_core_instantiations",
+        "//testdata/reference_modules:go_core_types",
         "//testdata/reference_modules:go_testobject",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
