Do not run pre-commit action on windows
For some reason the pre-commit action fails on the windows-latest
runner:

  Run pre-commit/action@v2.0.3
  install pre-commit
  Error: The process 'C:\hostedtoolcache\windows\Python\3.10.1\x64\Scripts\pip.exe' failed with exit code 3221225477

Since the pre-commit output will be identical on all systems anyway, I
am moving the pre-commit test to a separate job that only runs on
ubuntu-latest.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,16 @@ name: Run tests
 on: push
 
 jobs:
+  lint:
+    name: Run linters
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - uses: pre-commit/action@v2.0.3
+
   test:
     strategy:
       matrix:
@@ -21,8 +31,6 @@ jobs:
         with:
           path: "~/.cache/bazel"
           key: bazel
-
-      - uses: pre-commit/action@v2.0.3
 
       - name: gazelle
         run: |
