--- a/test/reference/BUILD.bazel
+++ b/test/reference/BUILD.bazel
@@ -24,7 +24,7 @@ go_test(
         "TESTDATA_BIN": "$(rootpath :testdata)",
     },
     deps = [
-        "//:lib",
+        "//:go-zserio",
         "//testdata/reference_modules:go_core_instantiations",
         "//testdata/reference_modules:go_core_types",
         "//testdata/reference_modules:go_testobject",
