--- a/internal/model/BUILD.bazel
+++ b/internal/model/BUILD.bazel
@@ -33,5 +33,6 @@ go_test(
         "@com_github_google_go_cmp//cmp",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )
