Use Relative Paths instead of Absolute Paths, and use Bazel for File Lookup
- bazel.Runfile() requires relative paths to work, hence the workdir
  envvars were removed.

--- a/test/reference/BUILD.bazel
+++ b/test/reference/BUILD.bazel
@@ -30,5 +30,6 @@ go_test(
         "//testdata/reference_modules:go_testobject",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )
