--- a/internal/generator/BUILD.bazel
+++ b/internal/generator/BUILD.bazel
@@ -63,5 +63,6 @@ go_test(
         "//internal/model",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )
