--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,19 @@ jobs:
       - uses: actions/setup-python@v2
       - uses: pre-commit/action@v2.0.3
 
+      - name: Mount bazel cache
+        uses: actions/cache@v2
+        with:
+          path: "~/.cache/bazel"
+          key: bazel
+
+      - name: Check for uncommited changes
+        run: |
+          ./bin/ensure-unchanged bazel run //:buildifier
+          ./bin/ensure-unchanged bazel run //internal/parser:update
+          ./bin/ensure-unchanged ./bin/gazelle
+          ./bin/ensure-unchanged ./bin/gazelle-update-repos
+
   test:
     strategy:
       matrix:
@@ -31,13 +44,6 @@ jobs:
         with:
           path: "~/.cache/bazel"
           key: bazel
-
-      - name: gazelle
-        run: |
-          ./bin/ensure-unchanged bazel run //:buildifier
-          ./bin/ensure-unchanged bazel run //internal/parser:update
-          ./bin/ensure-unchanged ./bin/gazelle
-          ./bin/ensure-unchanged ./bin/gazelle-update-repos
 
       - run: bazel test //...
 
