Implement Code Generation for Constants
- This commit will implement the generation of constants, by
  doing the following:
- The value expression of consts are now evaluated.
- String literal expressions are now supported.
- Constants are now evaluated.
- Constant names are capitalized.
- Constant types are actually generated in Go.

--- a/internal/ast/BUILD.bazel
+++ b/internal/ast/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "bitmask.go",
         "choice.go",
+        "const.go",
         "enum.go",
         "expression.go",
         "field.go",
