--- a/internal/generator/BUILD.bazel
+++ b/internal/generator/BUILD.bazel
@@ -47,6 +47,7 @@ go_library(
         "//internal/parser",
         "@com_github_iancoleman_strcase//:strcase",
         "@com_github_masterminds_sprig_v3//:sprig",
+        "@org_golang_x_exp//maps",
     ],
 )
 
